# BlueArchive.ics

./: LICENSE  README.md  pyproject.toml
bluearchive_ics/: __init__.py  calendar.py  main.py  scraper.py
bluearchive_ics/templates/: index.html
