[tool.poetry]
name = "bluearchive-ics"
version = "0.1.0"
description = "将蔚蓝档案(Blue Archive)的卡池和活动信息转换为 iCalendar 日历文件"
authors = ["This-is-XiaoDeng <1744793737@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/This-is-XiaoDeng/BlueArchive.ics"
packages = [{include = "bluearchive_ics"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
httpx = "^0.28"
icalendar = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
